--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.blog-nav {
+  display: flex;
+  background: black;
+  width: 100%;
+  color: aliceblue;
+  padding-left: 20px;
+}
